# chatServer

./: .gitignore  CMakeLists.txt  README.md
Base/: CMakeLists.txt
Base/Logger/: CMakeLists.txt
Base/Logger/Logger.Interface/: CMakeLists.txt  ILogger.h
Base/Logger/Logger.Static/: CMakeLists.txt  Logger.cpp  Logger.h
Base/Logger/Logger.Test/: CMakeLists.txt  TestLoggerToFile.cpp
Base/Models/: CMakeLists.txt
Base/Utility/: CMakeLists.txt  FileUtility.h  TimeUtility.h
Network/: CMakeLists.txt
Network/Network.Libs/: CMakeLists.txt  Connection.h
Server/: CMakeLists.txt
Server/Server.ConsoleApp/: CMakeLists.txt  ServerConsole.cpp
Server/Server.Core/: CMakeLists.txt  ServerCore.cpp  ServerCore.h
cmake/: CMakeConfig.cmake  ConanModule.cmake  Warnings.cmake
